[gd_scene load_steps=13 format=2]

[ext_resource type="Material" path="res://addons/aero_tools/resources/Plane_Metal.tres" id="1"]
[ext_resource type="PackedScene" path="res://scenes/FPV_HUD.tscn" id="2"]
[ext_resource type="Environment" uid="uid://dawhrmbdg5ggd" path="res://resources/camera_env.tres" id="3"]
[ext_resource type="Script" path="res://addons/aero_tools/scripts/aero_pid_calc.gd" id="5"]
[ext_resource type="Script" path="res://scripts/Plane03_V2.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/3D_GCS.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/3D_HUD_V2.tscn" id="12"]
[ext_resource type="Script" path="res://addons/aero_tools/scripts/aero_surface.gd" id="14"]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CapsuleShape3D" id=2]
margin = 0.001
radius = 0.25
height = 6.0

[sub_resource type="BoxShape3D" id=3]
margin = 0.001
extents = Vector3( 4, 0.05, 0.4 )

[sub_resource type="BoxShape3D" id=5]
margin = 0.001
extents = Vector3( 1, 0.05, 0.25 )

[node name="Plane" type="VehicleBody3D"]
mass = 500.0
physics_material_override = SubResource( 1 )
custom_integrator = true
continuous_cd = true
max_contacts_reported = 32
can_sleep = false
linear_damp = 0.0
angular_damp = 1.0
script = ExtResource( 6 )

[node name="CollisionShape_Fuse" type="CollisionShape3D" parent="."]
shape = SubResource( 2 )

[node name="CollisionShape_Wing" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, -0.25 )
shape = SubResource( 3 )

[node name="CollisionShape_Tail_L" type="CollisionShape3D" parent="."]
transform = Transform3D( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.9, 0.875, 2.7 )
shape = SubResource( 5 )

[node name="CollisionShape_Tail_R" type="CollisionShape3D" parent="."]
transform = Transform3D( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.9, 0.875, 2.7 )
shape = SubResource( 5 )

[node name="Camera_FPV" type="Camera3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.25 )
environment = ExtResource( 3 )
current = true
fov = 60.0
far = 1e+06

[node name="FPV_HUD" parent="Camera_FPV" instance=ExtResource( 2 )]

[node name="Camera_Ext" type="Camera3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 2, 7 )
cull_mask = 1048557
environment = ExtResource( 3 )
fov = 60.0
far = 100000.0

[node name="PID_Calc_Pitch" type="Node" parent="."]
script = ExtResource( 5 )
term_P = 0.2
term_I = 0.2
term_D = 0.1
param_tuning_active = false

[node name="3D_HUD_V2" parent="." instance=ExtResource( 12 )]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.90929 )
visible = false

[node name="3D_GCS" parent="." instance=ExtResource( 7 )]
transform = Transform3D( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 2.47844, -6.76695 )
visible = false

[node name="AeroSurface_Fuse" type="Node3D" parent="."]
script = ExtResource( 14 )
length_chord_root = 6.0
length_chord_tip = 6.0
length_span = 0.8

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Fuse"]
transform = Transform3D( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
radius = 0.25
height = 6.0
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGSphere3D" type="CSGSphere3D" parent="AeroSurface_Fuse/CSGCylinder3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
radius = 0.25
radial_segments = 32
rings = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGSphere2" type="CSGSphere3D" parent="AeroSurface_Fuse/CSGCylinder3D"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )
radius = 0.25
radial_segments = 32
rings = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Wing_L" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, -2, 0.2, -0.25 )
script = ExtResource( 14 )
length_chord_root = 0.8
length_chord_tip = 0.8
length_span = 4.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Wing_L"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.4
height = 4.0
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Wing_R" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 0.999848, -0.0174524, 0, 0.0174524, 0.999848, 2, 0.2, -0.25 )
script = ExtResource( 14 )
length_chord_root = 0.8
length_chord_tip = 0.8
length_span = 4.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Wing_R"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.4
height = 4.0
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Aileron_L" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1, 0.2, 0.15 )
script = ExtResource( 14 )
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 1.8
pos_COP = Vector3( 0, 0, 0.125 )

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Aileron_L"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125 )
radius = 0.125
height = 1.8
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Aileron_R" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1, 0.2, 0.15 )
script = ExtResource( 14 )
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 1.8
pos_COP = Vector3( 0, 0, 0.125 )

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Aileron_R"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125 )
radius = 0.125
height = 1.8
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Flap_L" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0.2, 0.15 )
script = ExtResource( 14 )
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 1.8
pos_COP = Vector3( 0, 0, 0.125 )

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Flap_L"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125 )
radius = 0.125
height = 1.8
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Flap_R" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0.2, 0.15 )
script = ExtResource( 14 )
length_chord_root = 0.25
length_chord_tip = 0.25
length_span = 1.8
pos_COP = Vector3( 0, 0, 0.125 )

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Flap_R"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.125 )
radius = 0.125
height = 1.8
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Ruddervator_L" type="Node3D" parent="."]
transform = Transform3D( 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, -0.9, 0.875, 2.7 )
script = ExtResource( 14 )
length_chord_root = 0.5
length_chord_tip = 0.5
length_span = 2.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Ruddervator_L"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.25
height = 2.0
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="AeroSurface_Ruddervator_R" type="Node3D" parent="."]
transform = Transform3D( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0.9, 0.875, 2.7 )
script = ExtResource( 14 )
length_chord_root = 0.5
length_chord_tip = 0.5
length_span = 2.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="AeroSurface_Ruddervator_R"]
transform = Transform3D( -4.37114e-09, 1, 0, -0.1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.25
height = 2.0
sides = 32
smooth_faces = false
material = ExtResource( 1 )

[node name="VehicleWheel_NLG" type="VehicleWheel3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -2 )
use_as_steering = true
wheel_radius = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 150.0
damping_compression = 0.99
damping_relaxation = 0.995

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleWheel_NLG"]
transform = Transform3D( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.01
sides = 32
material = ExtResource( 1 )

[node name="VehicleWheel_MLG_L" type="VehicleWheel3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0.25 )
use_as_traction = true
wheel_radius = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 15000.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleWheel_MLG_L"]
transform = Transform3D( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.01
sides = 32
material = ExtResource( 1 )

[node name="VehicleWheel_MLG_R" type="VehicleWheel3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0.25 )
use_as_traction = true
wheel_radius = 0.1
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 150.0
suspension_max_force = 15000.0
damping_compression = 0.95
damping_relaxation = 0.98

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="VehicleWheel_MLG_R"]
transform = Transform3D( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.1
height = 0.01
sides = 32
material = ExtResource( 1 )

[node name="CSGCylinder_Strut_NLG_L" type="CSGCylinder3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00786392, -0.391195, -2 )
radius = 0.002
height = 1.2
sides = 16
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder_Strut_NLG_R" type="CSGCylinder3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.008, -0.391, -2 )
radius = 0.002
height = 1.2
sides = 16
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder_Axle_MLG_L" type="CSGCylinder3D" parent="."]
transform = Transform3D( 0, 1, 0, -1, 0, 0, 0, 0, 1, -0.922, -1.016, 0.25 )
radius = 0.01
height = 0.15
sides = 16
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder_Strut_MLG_L" type="CSGCylinder3D" parent="CSGCylinder_Axle_MLG_L"]
transform = Transform3D( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, -0.416083, 0.467814, 0 )
radius = 0.01
height = 1.25
sides = 16
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder_Axle_MLG_R" type="CSGCylinder3D" parent="."]
transform = Transform3D( 0, 1, 0, -1, 0, 0, 0, 0, 1, 0.922, -1.016, 0.25 )
radius = 0.01
height = 0.15
sides = 16
smooth_faces = false
material = ExtResource( 1 )

[node name="CSGCylinder_Strut_MLG_R" type="CSGCylinder3D" parent="CSGCylinder_Axle_MLG_R"]
transform = Transform3D( -0.707107, -0.707107, 0, 0.707107, -0.707107, 0, 0, 0, 1, -0.416, -0.468, 0 )
radius = 0.01
height = 1.25
sides = 16
smooth_faces = false
material = ExtResource( 1 )
